# caldera-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
caldera_mcp/: __init__.py  caldera_client.py  server.py
caldera_mcp/tools/: agents.py  content.py  health.py  operations.py
