[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caldera-mcp"
version = "0.1.0"
description = "MCP server for MITRE Caldera adversary emulation platform"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
keywords = ["mcp", "caldera", "mitre", "adversary-emulation", "red-team", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
    "requests>=2.31.0",
]

[project.scripts]
caldera-mcp = "caldera_mcp.server:main"

[project.urls]
Homepage = "https://github.com/cowboy-samurai/caldera-mcp"
Repository = "https://github.com/cowboy-samurai/caldera-mcp"
Issues = "https://github.com/cowboy-samurai/caldera-mcp/issues"
